--- a/views/upload/form.jade
+++ b/views/upload/form.jade
@@ -7,7 +7,11 @@ block content
     
       form(action="/upload", method="POST", enctype="multipart/form-data")
         div.form-group
-          label(for="exampleInputFile") CSV file
+          label(for="delimiter") Delimeter
+          input.form-control(type="text", name="delimiter", value=";")
+      
+        div.form-group
+          label(for="csvData") CSV file
           input(type="file", name="csvData")
           p.help-block Please select a csv file to upload
             
